--- a/app/src/main/res/drawable/loginbackground.xml
+++ b/app/src/main/res/drawable/loginbackground.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-   <gradient android:startColor="#200122"
-            android:endColor="#6f0000"/>
+    <gradient android:startColor="#ddd6f3"
+        android:endColor="#faaca8"/>
 </shape>
