--- a/app/src/main/res/layout/activity_daycare_login.xml
+++ b/app/src/main/res/layout/activity_daycare_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".loginActivity">
+    tools:context=".Activities.DaycareLoginActivity">
 
 
     <com.google.android.material.button.MaterialButtonToggleGroup
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="50dp"
 
         app:checkedButton="@id/DaycareTab"
         app:singleSelection="true">
