--- a/app/src/main/res/layout/fragment_parent_login.xml
+++ b/app/src/main/res/layout/fragment_parent_login.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParentLoginFragment">
+    tools:context=".Fragments.ParentLoginFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -69,6 +69,18 @@
                 android:layout_marginTop="18dp"
                 android:text="Login"
                 app:backgroundTint="#78AE51" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/parentLoginBtn"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp"
+                android:text="New to Tifants? Signup here"
+                android:textColor="@color/ic_launcher_background"
+                android:textSize="16sp"
+                android:textStyle="bold|italic" />
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
